tests/baselines/reference/controlFlowWithTemplateLiterals.errors.txt
tests/cases/conformance/controlFlow/controlFlowWithTemplateLiterals.ts(7,15): error TS2638: Type '{} | { test: string; }' may represent a primitive value, which is not permitted as the right operand of the 'in' operator.


==== tests/cases/conformance/controlFlow/controlFlowWithTemplateLiterals.ts (1 errors) ====
    declare const envVar: string | undefined;
    if (typeof envVar === `string`) {
      envVar.slice(0)
    }
    
    declare const obj: {test: string} | {}
    if (`test` in obj) {
                  ~~~
!!! error TS2638: Type '{} | { test: string; }' may represent a primitive value, which is not permitted as the right operand of the 'in' operator.
      obj.test.slice(0)
    }
    